# simplextk

./: CMakeLists.txt  Example-Master-CMakeLists.txt  LICENSE  README.md  meson.build  simplextk.hpp
include/: Array.hpp  CFileWrapper.hpp  Console.hpp  ConsoleReader.hpp  ConsoleWriter.hpp  DataCell.hpp  DataRow.hpp  DataTable.hpp  Database.hpp  DateTime.hpp  Dictionary.hpp  EndFormattingDecorations.hpp  Exception.hpp  FileReader.hpp  FileSystem.hpp  FileWriter.hpp  FormattingDecorations.hpp  Internal.hpp  Logger.hpp  Math.hpp  MemoryBlock.hpp  Primitive.hpp  Signal.hpp  Singleton.hpp  SingletonManager.hpp  SmartRef.hpp  StreamReader.hpp  StreamWriter.hpp  StringReader.hpp  StringWriter.hpp  SupportsSignals.hpp  Thread.hpp  ThreadManager.hpp  TreeNode.hpp  Tuple.hpp  TypeArray.hpp  XmlReader.hpp  XmlWriter.hpp  object.hpp  string.hpp
src/: CFileWrapper.cpp  CMakeLists.txt  Console.cpp  ConsoleReader.cpp  ConsoleWriter.cpp  DataCell.cpp  DataRow.cpp  DataTable.cpp  DateTime.cpp  Exception.cpp  FileReader.cpp  FileSystem.cpp  FileWriter.cpp  Logger.cpp  Singleton.cpp  StringReader.cpp  StringWriter.cpp  SupportsSignals.cpp  Thread.cpp  ThreadManager.cpp  TreeNode.cpp  XmlReader.cpp  XmlWriter.cpp  string.cpp
src/Common/: CFileWrapper.cpp  ConsoleWriter.cpp  DateTime.cpp  Exception.cpp  FileReader.cpp  FileSystem.cpp  Logger.cpp  StringWriter.cpp  SupportsSignals.cpp  XmlWriter.cpp  string.cpp
tests/: ArrayTest.cpp  CMakeLists.txt  ExceptionTest.cpp  PrimitiveTest.cpp  SignalTest.cpp  TreeNodeTest.cpp  stringTest.cpp
