include(CTest)
enable_testing()

set(TestName "ExceptionTest")
add_executable(${TestName} ${TestName}.cpp)
target_link_libraries(${TestName} simplextk)
set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TestName}")
add_test(${TestName}_0, ${TestExecutable} "0")
add_test(${TestName}_1, ${TestExecutable} "1")
add_test(${TestName}_2, ${TestExecutable} "2")
add_test(${TestName}_3, ${TestExecutable} "3")

set(TestName "stringTest")
add_executable(${TestName} ${TestName}.cpp)
target_link_libraries(${TestName} simplextk)
set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TestName}")
add_test(${TestName}_0, ${TestExecutable} "0")
add_test(${TestName}_1, ${TestExecutable} "1")
add_test(${TestName}_2, ${TestExecutable} "2")
add_test(${TestName}_3, ${TestExecutable} "3")
add_test(${TestName}_4, ${TestExecutable} "4")
add_test(${TestName}_5, ${TestExecutable} "5")
#add_test(${TestName}_6, ${TestExecutable} "6")
add_test(${TestName}_7, ${TestExecutable} "7")
add_test(${TestName}_8, ${TestExecutable} "8")
add_test(${TestName}_9, ${TestExecutable} "9")
add_test(${TestName}_10, ${TestExecutable} "10")
add_test(${TestName}_11, ${TestExecutable} "11")
add_test(${TestName}_12, ${TestExecutable} "12")
add_test(${TestName}_13, ${TestExecutable} "13")
add_test(${TestName}_14, ${TestExecutable} "14")

set(TestName "ArrayTest")
add_executable(${TestName} ${TestName}.cpp)
target_link_libraries(${TestName} simplextk)
set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TestName}")
add_test(${TestName}_0, ${TestExecutable} "0")
add_test(${TestName}_1, ${TestExecutable} "1")
add_test(${TestName}_2, ${TestExecutable} "2")
add_test(${TestName}_3, ${TestExecutable} "3")
add_test(${TestName}_4, ${TestExecutable} "4")
add_test(${TestName}_5, ${TestExecutable} "5")
add_test(${TestName}_6, ${TestExecutable} "6")
add_test(${TestName}_7, ${TestExecutable} "7")
add_test(${TestName}_8, ${TestExecutable} "8")
add_test(${TestName}_9, ${TestExecutable} "9")
add_test(${TestName}_10, ${TestExecutable} "10")
add_test(${TestName}_11, ${TestExecutable} "11")
add_test(${TestName}_12, ${TestExecutable} "12")
add_test(${TestName}_13, ${TestExecutable} "13")
add_test(${TestName}_14, ${TestExecutable} "14")
add_test(${TestName}_15, ${TestExecutable} "15")
add_test(${TestName}_16, ${TestExecutable} "16")
add_test(${TestName}_17, ${TestExecutable} "17")

set(TestName "SignalTest")
add_executable(${TestName} ${TestName}.cpp)
target_link_libraries(${TestName} simplextk)
set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TestName}")
add_test(${TestName}_0, ${TestExecutable} "0")
add_test(${TestName}_1, ${TestExecutable} "1")
add_test(${TestName}_2, ${TestExecutable} "2")
add_test(${TestName}_3, ${TestExecutable} "3")

set(TestName "TreeNodeTest")
add_executable(${TestName} ${TestName}.cpp)
target_link_libraries(${TestName} simplextk)
set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TestName}")
add_test(${TestName}_0, ${TestExecutable} "0")
add_test(${TestName}_1, ${TestExecutable} "1")
add_test(${TestName}_2, ${TestExecutable} "2")
add_test(${TestName}_3, ${TestExecutable} "3")