include(CTest)
enable_testing()

set(TestName "ExceptionTest")
if(NOT TARGET ${PROJECT_NAME}_${TestName})
    add_executable(${PROJECT_NAME}_${TestName} ${TestName}.cpp)
    target_link_libraries(${PROJECT_NAME}_${TestName} ${PROJECT_NAME})
    set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}_${TestName}")
    add_test(${PROJECT_NAME}_${TestName}_0, ${TestExecutable} "0")
    add_test(${PROJECT_NAME}_${TestName}_1, ${TestExecutable} "1")
    add_test(${PROJECT_NAME}_${TestName}_2, ${TestExecutable} "2")
    add_test(${PROJECT_NAME}_${TestName}_3, ${TestExecutable} "3")
endif()

set(TestName "stringTest")
if(NOT TARGET ${PROJECT_NAME}_${TestName})
    add_executable(${PROJECT_NAME}_${TestName} ${TestName}.cpp)
    target_link_libraries(${PROJECT_NAME}_${TestName} ${PROJECT_NAME})
    set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}_${TestName}")
    add_test(${PROJECT_NAME}_${TestName}_0, ${TestExecutable} "0")
    add_test(${PROJECT_NAME}_${TestName}_1, ${TestExecutable} "1")
    add_test(${PROJECT_NAME}_${TestName}_2, ${TestExecutable} "2")
    add_test(${PROJECT_NAME}_${TestName}_3, ${TestExecutable} "3")
    add_test(${PROJECT_NAME}_${TestName}_4, ${TestExecutable} "4")
    add_test(${PROJECT_NAME}_${TestName}_5, ${TestExecutable} "5")
    #add_test(${PROJECT_NAME}_${TestName}_6, ${TestExecutable} "6")
    add_test(${PROJECT_NAME}_${TestName}_7, ${TestExecutable} "7")
    add_test(${PROJECT_NAME}_${TestName}_8, ${TestExecutable} "8")
    add_test(${PROJECT_NAME}_${TestName}_9, ${TestExecutable} "9")
    add_test(${PROJECT_NAME}_${TestName}_10, ${TestExecutable} "10")
    add_test(${PROJECT_NAME}_${TestName}_11, ${TestExecutable} "11")
    add_test(${PROJECT_NAME}_${TestName}_12, ${TestExecutable} "12")
    add_test(${PROJECT_NAME}_${TestName}_13, ${TestExecutable} "13")
    add_test(${PROJECT_NAME}_${TestName}_14, ${TestExecutable} "14")
    add_test(${PROJECT_NAME}_${TestName}_15, ${TestExecutable} "15")
endif()

set(TestName "ArrayTest")
if(NOT TARGET ${PROJECT_NAME}_${TestName})
    add_executable(${PROJECT_NAME}_${TestName} ${TestName}.cpp)
    target_link_libraries(${PROJECT_NAME}_${TestName} ${PROJECT_NAME})
    set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}_${TestName}")
    add_test(${PROJECT_NAME}_${TestName}_0, ${TestExecutable} "0")
    add_test(${PROJECT_NAME}_${TestName}_1, ${TestExecutable} "1")
    add_test(${PROJECT_NAME}_${TestName}_2, ${TestExecutable} "2")
    add_test(${PROJECT_NAME}_${TestName}_3, ${TestExecutable} "3")
    add_test(${PROJECT_NAME}_${TestName}_4, ${TestExecutable} "4")
    add_test(${PROJECT_NAME}_${TestName}_5, ${TestExecutable} "5")
    add_test(${PROJECT_NAME}_${TestName}_6, ${TestExecutable} "6")
    add_test(${PROJECT_NAME}_${TestName}_7, ${TestExecutable} "7")
    add_test(${PROJECT_NAME}_${TestName}_8, ${TestExecutable} "8")
    add_test(${PROJECT_NAME}_${TestName}_9, ${TestExecutable} "9")
    add_test(${PROJECT_NAME}_${TestName}_10, ${TestExecutable} "10")
    add_test(${PROJECT_NAME}_${TestName}_11, ${TestExecutable} "11")
    add_test(${PROJECT_NAME}_${TestName}_12, ${TestExecutable} "12")
    add_test(${PROJECT_NAME}_${TestName}_13, ${TestExecutable} "13")
    add_test(${PROJECT_NAME}_${TestName}_14, ${TestExecutable} "14")
    add_test(${PROJECT_NAME}_${TestName}_15, ${TestExecutable} "15")
    add_test(${PROJECT_NAME}_${TestName}_16, ${TestExecutable} "16")
    add_test(${PROJECT_NAME}_${TestName}_17, ${TestExecutable} "17")
endif()

set(TestName "SignalTest")
if(NOT TARGET ${PROJECT_NAME}_${TestName})
    add_executable(${PROJECT_NAME}_${TestName} ${TestName}.cpp)
    target_link_libraries(${PROJECT_NAME}_${TestName} ${PROJECT_NAME})
    set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}_${TestName}")
    add_test(${PROJECT_NAME}_${TestName}_0, ${TestExecutable} "0")
    add_test(${PROJECT_NAME}_${TestName}_1, ${TestExecutable} "1")
    add_test(${PROJECT_NAME}_${TestName}_2, ${TestExecutable} "2")
    add_test(${PROJECT_NAME}_${TestName}_3, ${TestExecutable} "3")
endif()

#[[set(TestName "TreeNodeTest")
if(NOT TARGET ${PROJECT_NAME}_${TestName})
    add_executable(${PROJECT_NAME}_${TestName} ${TestName}.cpp)
    target_link_libraries(${PROJECT_NAME}_${TestName} ${PROJECT_NAME})
    set(TestExecutable "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}_${TestName}")
    add_test(${PROJECT_NAME}_${TestName}_0, ${TestExecutable} "0")
    add_test(${PROJECT_NAME}_${TestName}_1, ${TestExecutable} "1")
    add_test(${PROJECT_NAME}_${TestName}_2, ${TestExecutable} "2")
    add_test(${PROJECT_NAME}_${TestName}_3, ${TestExecutable} "3")
endif()]]